src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@print 5;.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Print: 
[line    1] ╰─── Literal: 5
