src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@var a int;.snap
---
source: src/parser/serenity_parser/test.rs
expression: err
---
"[line 1] error at 'int' : Expect ';' or ':' or '=' after variable name.\n"
